--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@turf/clusters-dbscan": "^7.2.0",
+    "@turf/turf": "^7.2.0",
+    "axios": "^1.6.0",
     "expo": "~53.0.0",
+    "expo-constants": "~17.1.7",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.6",
-    "expo-constants": "~17.1.7",
-    "axios": "^1.6.0",
-    "react-native-svg": "15.11.2",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "typescript": "^5.3.0",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "babel-plugin-module-resolver": "^5.0.0",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
